Fix invalid z-index class

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
   }
 
   body {
-    @apply font-satoshi font-normal text-base text-body bg-white relative z-1;
+    @apply font-satoshi font-normal text-base text-body bg-white relative z-10;
   }
 }
 
